Revamped Ireland Page

--- a/IrelandGuide.html
+++ b/IrelandGuide.html
@@ -188,29 +188,81 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
+
+<h1>Some Facts about Ireland</h1>
+<p>Ireland, also known as the Emerald Isle, is a country located in Western Europe.
+	It is known for its stunning landscapes, rich history, and unique culture. Ireland has
+	a population of approximately 5 million people (as of 2023). Its official languages are English
+	and Irish (Gaelic), with it being known for its folklore, music, and dance. Some of Ireland's
+	 famous symbols being Guinness, a harp, and the shamrock which is usually associated with St.
+	 Patrick's Day. 
+</p>
+
+<p><strong>Average Amount of Money Spent By Tourists</strong></p>
+<p>Dublin</p>
+<ul>
+	<li>Budget: $46 / day per person</li>
+	<li>Mid-Range: $119 /  day per person</li>
+	<li>High-Range: $209 / day per person</li>
+</ul>
+<p>Galway</p>
+<ul>
+	<li>Budget: $43 / day per person</li>
+	<li>Mid-Range: $97 / day per person</li>
+	<li>High-End: $209 / day per person</li>
+</ul>
+
 <h1>Popular Cities in Ireland</h1>
-<br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Dublin</h3>
 <br>
 <div class = "row">
-	<div class = "column">
-		<img src = "Images/Ireland/" alt = "">
-		<p></p>
+	<div class = "1column">
+		<img src = "Images/Ireland/GuinnessStorehouse.jpg" alt = "Guinness Storehouse">
+		<h4>Guinness Storehouse</h4>
+		<p>This tourist attraction introduces the ingredients of beer and features the history
+			 of Guinness advertising and interactive activities on responsible drinking.
+		</p>
 	</div>
-	<div class = "column">
-		<img src = "Images/Ireland/" alt = "">
-		<p></p>
+	<div class = "1column">
+		<img src = "Images/Ireland/PhoenixPark.jpg" alt = "Phoenix Park">
+		<h4>Phoenix Park</h4>
+		<p>This park was once a royal hunting ground due to it being filled with wild fallow deer,
+			 which still roam the park to this day.
+		</p>
 	</div>
-	<div class = "column">
-		<img src = "Images/Ireland/" alt = "">
-		<p></p>
+	<div class = "1column">
+		<img src = "Images/Ireland/DublinCastle.jpg" alt = "Dublin Castle">
+		<h4>Dublin Castle</h4>
+		<p>This castle was built in the early 13th century and served as a headquaters for the 
+			British administration in Ireland until 1992 when Ireland gained independence.
+		</p>
 	</div>
-	<div class = "column">
-		<img src = "Images/Ireland/" alt = "">
-		<p></p>
-	</div>
-</div>
 </div>
 
+<br>
+<h3>Places to Visit in Galway</h3>
+<br>
+<div class = "row">
+	<div class = "1column">
+		<img src = "Images/Ireland/GalwayCathedral.jpg" alt = "Galway Cathedral">
+		<h4>Galway Cathedral</h4>
+		<p>Also known as the Cathedral of Our Lady Assumed into Heaven and St. Nicholas, 
+			this cathedral was built in 1965 over the old city prison.
+		</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images/Ireland/DunguaireCastle.jpg" alt = "Dunguaire Castle">
+		<h4>Dunguaire Castle</h4>
+		<p>This castle was built on the southeastern shore of Galway Bay in the 16th century.</p>
+	</div>
+	<div class = "1column">
+		<img src = "Images/Ireland/ConnemaraPark.jpg" alt = "Connemara National Park0">
+		<h4>Connemara National Park</h4>
+		<p>This park is 2,000 hectares of mountain, bogs, grasslands, and forests. It also 
+			features a variety of common song birds and carnivourous plants.
+		</p>
+	</div>
+</div>
+</div>
 </body>
 </html>
