--- a/JamaicaGuide.html
+++ b/JamaicaGuide.html
@@ -188,25 +188,52 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
-<h1>Popular Cities in Jamaica</h1>
+
+<h1>Some Facts about Country</h1>
+<p>Jamaica is and island country located in the Caribbean Sea, south of Cuba.
+	It has a population of approximately 2.7 million people (as of 2023) and its 
+	capital is Kingston. The official language is English, with its currency being 
+	the Jamaican dollar (JMD). Jamaica is known for its vibrant culture, including 
+	raggae music and its famous cuisine. The country has a diverse geography, with 
+	lush rainforests, beautiful beaches, and the Blue Mountains, which are home to 
+	the world famous Blue Mountain coffee. Jamaica is also known for its athletic 
+	prowess, having produced world-renowned athletes like Usain Bolt and a rich history 
+	of track and field success.
+</p>
+
+<p><strong>Average Amount of Money Spent By Tourists</strong></p>
+<p>Montego Bay</p>
+<ul>
+	<li>Budget: $66 / day per person</li>
+	<li>Mid-Range: $165 /  day per person</li>
+	<li>High-Range: $403 / day per person</li>
+</ul>
+
+	<h1>Popular Cities in Jamaica</h1>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Montego Bay</h3>
 <br>
 <div class = "row">
-	<div class = "column">
+	<div class = "1column">
+		<img src = "Images/Jamaica/" alt = "Doctor's Cave Beach">
+		<h4>Doctor's Cave Beach</h4>
+		<p>This beach features multiple restaurants and is part of the Montego Bay 
+			Marine Park, so you can go snorkeling among the coral reefs and their marine life.
+		</p>
+	</div>
+	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
+		<h4></h4>
 		<p></p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
+		<h4></h4>
 		<p></p>
 	</div>
-	<div class = "column">
+	<div class = "1column">
 		<img src = "Images/Jamaica/" alt = "">
-		<p></p>
-	</div>
-	<div class = "column">
-		<img src = "Images/Jamaica/" alt = "">
+		<h4></h4>
 		<p></p>
 	</div>
 </div>
