--- a/JapanGuide.html
+++ b/JapanGuide.html
@@ -188,7 +188,25 @@
 
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
-<h1>Popular Cities in Japan</h1>
+
+	<h1>Some Facts about Country</h1>
+	<p></p>
+	
+	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
+	<p>City</p>
+	<ul>
+		<li>Budget: $ / day per person</li>
+		<li>Mid-Range: $ /  day per person</li>
+		<li>High-Range: $ / day per person</li>
+	</ul>
+	<p>City</p>
+	<ul>
+		<li>Budget: $ / day per person</li>
+		<li>Mid-Range: $ /  day per person</li>
+		<li>High-Range: $ / day per person</li>
+	</ul>
+
+	<h1>Popular Cities in Japan</h1>
 <br>
 <h3>Places to Visit in Tokyo</h3>
 <br>
