--- a/AustraliaGuide.html
+++ b/AustraliaGuide.html
@@ -188,46 +188,91 @@
 
 	<div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px;height:90%;overflow:auto;">
 	<div class = "CountryList">
+		
+	<h1>Some Facts About Australia</h1>
+	<p>Australia is the smallest continent while also being the largest country in the world and has a population of approximately 26 
+		million people (as of 2023). 85%-90% of this population lives on the coast due to its milder climate and most of central 
+		Australia being a desert. This country has no official language (English is considered their de facto language but it is 
+		not stated in their constitution). 80% of the animals found in Australia are unique to this country and you won't find 
+		there natural habitat anywhere else in the world.
+	</p>
+		
+	
+	<p>Sydney</p>
+	<ul>
+		<li>Budget: $81 / day per person</li>
+		<li>Mid-Range: $242 /  day per person</li>
+		<li>High-Range: $735 / day per person</li>
+	</ul>
+	<p>Melbourne</p>
+	<ul>
+		<li>Budget: $52 / day per person</li>
+		<li>Mid-Range: $151 / day per person</li>
+		<li>High-End: $472 / day per person</li>
+	</ul>
+	<p>Brisbane</p>
+	<ul>
+		<li>Budget: $36 / day per person</li>
+		<li>Mid-Range: $111 / day per person</li>
+		<li>High-End: $355 / day per person</li>
+	</ul>
+		
 	<h1>Popular Cities in Australia</h1>
 	<br>
 	<h3>Places to Visit in Sydney</h3>
 	<br>
 	<div class = "row">
-		<div class = "column">
+		<div class = "1column">
 			<img src = "Images/Australia/SydneyOperaHouse.jpg" alt = "Sydney Opera House">
-			<p>Sydney Opera House</p>
+			<h4>Sydney Opera House</h4>
+			<p>The Sydney Opera House is an arts center with seven venues located on the Sydney Harbour.
+			</p>
 		</div>
-		<div class = "column">
+		<div class = "1column">
 			<img src = "Images/Australia/BondiBeach.jpg" alt = "Bondi Beach">
-			<p>Bondi Beach</p>
+			<h4>Bondi Beach</h4>
+			<p>Bondi Beach is named after the surrounding suburb and is represented in the National Rugby League competition. 
+			</p>
 		</div>
-		<div class = "column">
+		<div class = "1column">
 			<img src = "Images/Australia/TarongaZooSydney.jpg" alt = "Taronga Zoo Sydney">
-			<p>Taronga Zoo Sydney</p>
+			<h4>Taronga Zoo Sydney</h4>
+			<p>The Taronga Zoo was the second zoo in Australia to breed a platypus.
+			</p>
 		</div>
 	</div>
 	<h3>Places to Visit in Melbourne</h3>
 	<br>
 	<div class = "row">
-		<div class = "column">
+		<div class = "1column">
 			<img src = "Images/Australia/QueenVictoriaMarket.jpeg" alt = "Queen Victoria Market">
-			<p>Queen Victoria Market</p>
+			<h4>Queen Victoria Market</h4>
+			<p>The Queen Victoria Market is located in the central business district of Melbourne and covers over 17 acres of land.
+			</p>
 		</div>
 		<div class = "column">
 			<img src = "Images/Australia/NationalGalleryOfVictoria.png" alt = "National Gallery of Victoria">
-			<p>National Gallery of Victoria</p>
+			<h4>National Gallery of Victoria</h4>
+			<p>Also known as the NGV, this museum houses art collections in two different locations, NGX International and the 
+				Ian Potter Centre: NKV Australia, with a third location to be opened in 2028.
+			</p>
 		</div>
 	</div>
 	<h3>Places to Visit in Brisbane</h3>
 	<br>
 	<div class = "row">
-		<div class = "column">
+		<div class = "1column">
 			<img src = "Images/Australia/LonePineKoalaSanctuary.jpeg" alt = "Lone Pine Koala Sanctuary">
-			<p>Lone Pine Koala Sanctuary</p>
+			<h4>Lone Pine Koala Sanctuary</h4>
+			<p>This is the world’s first and largest Koala Sanctuary that also houses about 80 other species of animals.
+			</p>
 		</div>
-		<div class = "column">
+		<div class = "1column">
 			<img src = "Images/Australia/EatStreetNorthshore.jpg" alt = "Eat Street Northshore">
-			<p>Eat Street Northshore</p>
+			<h4>Eat Street Northshore</h4>
+			<p>Eat Street Northshore is an entertainment center that has over 70 traders (bars, electric shops, restaurants) 
+				with food from every continent but Antartica.
+			</p>
 		</div>
 	</div>
 	</div>
