Added 5 more country webpages

--- a/KoreaGuide.html
+++ b/KoreaGuide.html
@@ -1,8 +1,8 @@
-<!-- Rachel Jones 04/03/2023-->
+<!-- Rachel Jones 04/18/2023-->
 <!DOCTYPE html>
 <html>
 <head>
-<title>JapanGuide</title>
+<title>KoreaGuide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -189,85 +189,99 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Japan</h1>
-	<p>Located in Eastern Asia, Japan is an island nation known for its rich history, culture, 
-		and technological advancements. It has a population of approximately 126 million people and 
-		is known for its highly efficient public transportation system and cutting-edge technology. 
-		Japan has a constitutional monarchy with Emperor Naruhito serving as the ceremonial 
-		figurehead. This capital city is Tokyo, one of the most populous cities in the world. Japan is 
-		renowned for its contributions to fields such as electronics, automotive manufacturing, robotics, 
-		and anime. It has a unique and diverse culinary culture, including sushi, ramen, and tempura. 
-		Japan is also known for its beautiful natural landscapes, including chery blossoms, Mount Fuji, 
-		and hot springs. Japanese arts and traditions such as tea ceremonies, calligraphy, and origami 
-		are highly respected and appreciated globally.
-	</p>
+	<h1>Some Facts about South Korea</h1>
+	<p>South Korea, is a country located in East Asia. It has a population of approximately 
+        52 million people and is known for its rapid economic development, technological 
+        advancements, and popular culture. The capital city of Seoul is one of the largest cities 
+        in the world. The country is famous for its vibrant K-pop music industry, K-dramas, and movies, 
+        which have gained international popularity in recent years. South Korea is also a leader in technology, 
+        including the production of smartphones. The country has a rich history and cultural heritage, with 
+        traditional arts such as pottery, calligraphy, and martial arts still being widely practiced today. 
+        South Korea is also known for its cuisine, including dishes such as kimchi, bibimbap, and Korean BBQ. 
+        The country is home to beautiful natural landmarks such as Jeju Island, Seoraksan National Park, 
+        and the Han River.
+    </p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>Tokyo</p>
+	<p>Seoul</p>
 	<ul>
-		<li>Budget: $44 / day per person</li>
-		<li>Mid-Range: $148 /  day per person</li>
-		<li>High-Range: $286 / day per person</li>
+		<li>Budget: $35 / day per person</li>
+		<li>Mid-Range: $90 /  day per person</li>
+		<li>High-Range: $238 / day per person</li>
 	</ul>
-	<p>Osaka</p>
+	<p>Busan</p>
 	<ul>
-		<li>Budget: $40 / day per person</li>
-		<li>Mid-Range: $78 /  day per person</li>
-		<li>High-Range: $261 / day per person</li>
+		<li>Budget: $30 / day per person</li>
+		<li>Mid-Range: $72 /  day per person</li>
+		<li>High-Range: $168 / day per person</li>
+	</ul>
+    <p>Seogwipo</p>
+	<ul>
+		<li>Budget: $90 / day per person</li>
+		<li>Mid-Range: $120 /  day per person</li>
+		<li>High-Range: $225 / day per person</li>
 	</ul>
 
-<h1>Popular Cities in Japan</h1>
-<h3>Places to Visit in Tokyo</h3>
+<h1>Popular Cities in South Korea</h1>
+<br>
+<h3>Places to Visit in Seoul</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Japan/TokyoTower.jpg" alt = "Tokyo Tower">
-		<h4>Tokyo Tower</h4>
-		<p>This communication and observation tower was built in 1958 and is 1,092
-			feet tall. Its inspiration is said to have come from the Eiffel Tower.
-		</p>
+		<img src = "Images/South Korea/SeoulTower.jpg" alt = "N Seoul Tower">
+		<h4>N Seoul Tower</h4>
+        <p>This communication and observation tower is located on Nam Mountain and sits at 774 
+            feet tall. It is South Korea's first general radio wave tower.
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/ShinjukuGarden.jpg" alt = "Shinjuku Gyoen National Garden">
-		<h4>Shinjuku Gyoen National Garden</h4>
-		<p>This garden was originally the residence of the Naito family in the early
-			17th century and is home to over 22,000 trees, including cherry blossoms.
-		</p>
+		<img src = "Images/South Korea/GwangjangMarket.jpg" alt = "Gwangjang Market">
+		<h4>Gwangjang Market</h4>
+        <p>This street market is where you can get traditional Korean street food with more than 5,000 shops.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/GhibliMuseum.jpg" alt = "GhibliMuseum">
-		<h4>Ghibli Museum</h4>
-		<p>This museum shows off work from the animation studio Studio Ghibli and
-			is dedicated to the art and skill of animation.
-		</p>
+		<img src = "Images/South Korea/GyeongbokgungPalace.jpg" alt = "Gyeongbokgung Palace">
+        <h4>Gyeongbokgung Palace</h4>
+		<p>This palace is the largest of the Five Grand Palaces built by the Joseon dynasty in 1395.</p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in Osaka</h3>
+<h3>Places to Visit in Busan</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Japan/OsakaCastle.jpg" alt = "Osaka Castle">
-		<h4>Osaka Castle</h4>
-		<p>Osaka Castle is a famous Japanese landmark located in the heart of Osaka, known 
-			for its grand architecture and historical significance.
-		</p>
+		<img src = "Images/South Korea/YongdusanPark.jpg" alt = "Yongdusan Park">
+        <h4>Yongdusan Park</h4>
+		<p>This park's most significant structure is the Busan Diamond Tower that has a 
+            panoramic view of the park at 393 feet high.
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/OsakaAquarium.jpg" alt = "Osaka Aquarium Kaiyukan">
-		<h4>Osaka Aquarium Kaiyukan</h4>
-		<p>The Osaka Aquarium Kaiyukan is one of the largest aquariums in the world, located 
-			in Osaka, featuring an enormous tank that houses a variety of marine life, including 
-			whale sharks and manta rays.
-		</p>
+		<img src = "Images/South Korea/HaeundaeBeach.jpg" alt = "Haeundae Beach">
+        <h4>Haeundae Beach</h4>
+		<p>Various festivals are held at this beach throughout the year, including e-sport 
+            events and an event that occurs in January where participants bathe in near 
+            freezing water.
+        </p>
+	</div>
+</div>
+<br>
+<h3>Places to Visit in Seogwipo</h3>
+<br>
+<div class = "row">
+	<div class = "1column">
+		<img src = "Images/South Korea/CheonjiyeonWaterfall.jpg" alt = "Cheonjiyeon Waterfall">
+        <h4>Cheonjiyeon Waterfall</h4>
+		<p>This waterfall is surrounded by a wooded area that is home to a variety of rare plants 
+            and large volcanic rocks.
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/KobeTower.jpg" alt = "Kobe Port Tower">
-		<h4>Kobe Port Tower</h4>
-		<p>This tower is a prominent landmark in the port city of Kobe, known for its 
-			unique shape and nighttime illuminations, offering panoramic views of the city 
-			and surrounding mountains from its observation deck.
-		</p>
+		<img src = "Images/South Korea/AquaPlanetJeju.jpg" alt = "Aqua Planet Jeju">
+        <h4>Aqua Planet Jeju</h4>
+		<p>This is the largest public aquarium in South Korea and features over 45,000 marine creatures. 
+            Its main tank is 6,000 tons of water filled with about 27,000 fish.
+        </p>
 	</div>
 </div>
 </div>
