--- a/MexicoGuide.html
+++ b/MexicoGuide.html
@@ -1,8 +1,8 @@
-<!-- Rachel Jones 04/03/2023-->
+<!-- Rachel Jones 04/18/2023-->
 <!DOCTYPE html>
 <html>
 <head>
-<title>JapanGuide</title>
+<title>Guide</title>
 <!-- The chunk beginning here will be on every page -->
         <link rel=stylesheet href="style.css">
 		<script>
@@ -189,85 +189,62 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Japan</h1>
-	<p>Located in Eastern Asia, Japan is an island nation known for its rich history, culture, 
-		and technological advancements. It has a population of approximately 126 million people and 
-		is known for its highly efficient public transportation system and cutting-edge technology. 
-		Japan has a constitutional monarchy with Emperor Naruhito serving as the ceremonial 
-		figurehead. This capital city is Tokyo, one of the most populous cities in the world. Japan is 
-		renowned for its contributions to fields such as electronics, automotive manufacturing, robotics, 
-		and anime. It has a unique and diverse culinary culture, including sushi, ramen, and tempura. 
-		Japan is also known for its beautiful natural landscapes, including chery blossoms, Mount Fuji, 
-		and hot springs. Japanese arts and traditions such as tea ceremonies, calligraphy, and origami 
-		are highly respected and appreciated globally.
-	</p>
+	<h1>Some Facts about Country</h1>
+	<p></p>
 	
 	<p><strong>Average Amount of Money Spent By Tourists</strong></p>
-	<p>Tokyo</p>
+	<p>City</p>
 	<ul>
-		<li>Budget: $44 / day per person</li>
-		<li>Mid-Range: $148 /  day per person</li>
-		<li>High-Range: $286 / day per person</li>
+		<li>Budget: $ / day per person</li>
+		<li>Mid-Range: $ /  day per person</li>
+		<li>High-Range: $ / day per person</li>
 	</ul>
-	<p>Osaka</p>
+	<p>City</p>
 	<ul>
-		<li>Budget: $40 / day per person</li>
-		<li>Mid-Range: $78 /  day per person</li>
-		<li>High-Range: $261 / day per person</li>
+		<li>Budget: $ / day per person</li>
+		<li>Mid-Range: $ /  day per person</li>
+		<li>High-Range: $ / day per person</li>
 	</ul>
 
-<h1>Popular Cities in Japan</h1>
-<h3>Places to Visit in Tokyo</h3>
+	<h1>Popular Cities in </h1>
+<br>
+<h3>Places to Visit in </h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Japan/TokyoTower.jpg" alt = "Tokyo Tower">
-		<h4>Tokyo Tower</h4>
-		<p>This communication and observation tower was built in 1958 and is 1,092
-			feet tall. Its inspiration is said to have come from the Eiffel Tower.
-		</p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/ShinjukuGarden.jpg" alt = "Shinjuku Gyoen National Garden">
-		<h4>Shinjuku Gyoen National Garden</h4>
-		<p>This garden was originally the residence of the Naito family in the early
-			17th century and is home to over 22,000 trees, including cherry blossoms.
-		</p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/GhibliMuseum.jpg" alt = "GhibliMuseum">
-		<h4>Ghibli Museum</h4>
-		<p>This museum shows off work from the animation studio Studio Ghibli and
-			is dedicated to the art and skill of animation.
-		</p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in Osaka</h3>
+<h3>Places to Visit in </h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Japan/OsakaCastle.jpg" alt = "Osaka Castle">
-		<h4>Osaka Castle</h4>
-		<p>Osaka Castle is a famous Japanese landmark located in the heart of Osaka, known 
-			for its grand architecture and historical significance.
-		</p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/OsakaAquarium.jpg" alt = "Osaka Aquarium Kaiyukan">
-		<h4>Osaka Aquarium Kaiyukan</h4>
-		<p>The Osaka Aquarium Kaiyukan is one of the largest aquariums in the world, located 
-			in Osaka, featuring an enormous tank that houses a variety of marine life, including 
-			whale sharks and manta rays.
-		</p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Japan/KobeTower.jpg" alt = "Kobe Port Tower">
-		<h4>Kobe Port Tower</h4>
-		<p>This tower is a prominent landmark in the port city of Kobe, known for its 
-			unique shape and nighttime illuminations, offering panoramic views of the city 
-			and surrounding mountains from its observation deck.
-		</p>
+		<img src = "Images//" alt = "">
+        <h4></h4>
+		<p></p>
 	</div>
 </div>
 </div>
