updated malaysia page

--- a/MalaysiaGuide.html
+++ b/MalaysiaGuide.html
@@ -189,7 +189,7 @@
 <div style="margin-left:25%;margin-top: 47px;position:fixed;padding:1px 16px; height: 90%;overflow:auto;">
 <div class = "CountryList">
 
-	<h1>Some Facts about Country</h1>
+	<h1>Some Facts about Malaysia</h1>
 	<p>Malaysia is a country located in Southeast Asia, known for its diverse cultures, 
         beautiful landscapes, and vibrant cities. It is composed of two main regions, Peninsular 
         Malaysia and East Malaysia, and has a population of over 32 million people. The country's 
@@ -227,34 +227,42 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "Petronas Towers">
+		<img src = "Images/Malaysia/PetronasTowers.jpg" alt = "Petronas Towers">
         <h4>Petronas Towers</h4>
-		<p></p>
+		<p>This pair of skyscrapers are the tallest twin towers in the world with 88 floors.</p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "Kuala Lumpur Bird Park">
+		<img src = "Images/Malaysia/BirdPark.jpg" alt = "Kuala Lumpur Bird Park">
         <h4>Kuala Lumpur Bird Park</h4>
-		<p></p>
+		<p>This park has over 200 species of birds and activites like bird feedings and bird shows. 
+            This park also includes a garden, the National Monument, and the Kuala Lumpur Butterfly Park.
+        </p>
 	</div>
 </div>
 <br>
-<h3>Places to Visit in </h3>
+<h3>Places to Visit in Langkawi</h3>
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Malaysia/TelagaTujuhWaterfalls.jpg" alt = "Telaga Tujuh Waterfall">
+        <h4>Telaga Tujuh Waterfall</h4>
+		<p>The name Telaga Tujuh means seven Wells Waterfalls, which references the seven 
+            connecting natural pools that are fed by seven separate Waterfalls.
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Malaysia/LangkawiCableCar.jpg" alt = "Langkawi SkyBridge Cable Car">
+        <h4>Langkawi SkyBridge Cable Car</h4>
+		<p>A fifteen minute cable car ride that is 1.4 miles long gives the riders a view 
+            of the forest, the Telaga Tujuh waterfall, and the sea.
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "">
-        <h4></h4>
-		<p></p>
+		<img src = "Images/Malaysia/KilimGeoforestPark.jpg" alt = "Kilim Geoforest Park">
+        <h4>Kilim Geoforest Park</h4>
+		<p>This 100 square kilometer nature reserve was the first geopark in Southeast Asia. 
+            Tours are given by boat on the Kilim River.
+        </p>
 	</div>
 </div>
 <br>
@@ -262,14 +270,18 @@
 <br>
 <div class = "row">
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "River Cruise on">
-        <h4>Petronas Towers</h4>
-		<p></p>
+		<img src = "Images/Malaysia/KliasRiverCruise.jpg" alt = "Klias River">
+        <h4>River Cruise on the Klias River</h4>
+		<p>This cruise gives a tour of the Klias wetlands where you can see proboscis 
+            monkeys, otters, crocodiles, and other wetland creatures. 
+        </p>
 	</div>
 	<div class = "1column">
-		<img src = "Images/Malaysia/" alt = "Kuala Lumpur Bird Park">
-        <h4>Kuala Lumpur Bird Park</h4>
-		<p></p>
+		<img src = "Images/Malaysia/KotaKinabaluCityMosque.jpg" alt = "Kota Kinabalu City Mosque">
+        <h4>Kota Kinabalu City Mosque</h4>
+		<p>The official opening of this mosque followed the proclamation of the city status of 
+            Kota Kinabalu in 2000, Visitors can be given tours and can go paddle boat riding.
+        </p>
 	</div>
 </div>
 </div>
